tests/keyvalue/keyvalue.exp
Error -------------------------------------------------------------------------------------------------- keyvalue.js:5:6

Cannot cast `x[""]` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   keyvalue.js:5:6
   5|     (x[""]: number);
           ^^^^^

References:
   keyvalue.js:4:32
   4|   function(x: { [key: number]: string }) {
                                     ^^^^^^ [1]
   keyvalue.js:5:13
   5|     (x[""]: number);
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- keyvalue.js:5:6

empty string [1] is incompatible with number [2]. [incompatible-type]

   keyvalue.js:5:6
   5|     (x[""]: number);
           ^^^^^ [1]

References:
   keyvalue.js:4:23
   4|   function(x: { [key: number]: string }) {
                            ^^^^^^ [2]



Found 2 errors
